force-app/main/default/objects/ampi__Question__c/ampi__Question__c.object-meta.xml
<CustomObject>
    <description>This object stores the template Section and Questions of a Submission template, as well as the Question and Answers of a Submission response.</description>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>