force-app/main/default/objects/ampi__Question__c/fields/ampi__Active__c.field-meta.xml
<CustomField>
    <fullName>ampi__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox field to determine whether a Question is displayed in a Submission template or not. If this is TRUE, it will be cloned on all Submissions that are created from the template. If this is FALSE, it will not be cloned on any new Submissions that are created from the template.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>