force-app/main/default/objects/ampi__Question__c/fields/ampi__Date_Response__c.field-meta.xml
<CustomField>
    <fullName>ampi__Date_Response__c</fullName>
    <label>Date Response</label>
    <type>Date</type>
</CustomField>