force-app/main/default/objects/ampi__Question__c/fields/ampi__Include_Comments__c.field-meta.xml
<CustomField>
    <fullName>ampi__Include_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to determine whether a responder can add supplemental commentary to the answer to this Question</description>
    <label>Include Comments?</label>
    <type>Checkbox</type>
</CustomField>