force-app/main/default/objects/ampi__Question__c/fields/ampi__Instructions__c.field-meta.xml
<CustomField>
    <fullName>ampi__Instructions__c</fullName>
    <description>Long text area field to provide reporters with additional guidance or instructions when responding to this Question record. The value in this field is displayed as helptext in the SubmissionResponseForm component.</description>
    <inlineHelpText>Use this box to provide additional guidance to your submitting users on this question, for example - character limits, required images or tables, etc.</inlineHelpText>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>