force-app/main/default/objects/ampi__Question__c/fields/ampi__Is_Scored__c.field-meta.xml
<CustomField>
    <fullName>ampi__Is_Scored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to determine whether a user can score a Question record while reviewing its parent Submission. If marked as TRUE, the Question will have an input field for a score on the SubmissionResponseScoring component.</description>
    <inlineHelpText>Use this checkbox to enable or prevent reviewers from assigning a score to responses to this question.</inlineHelpText>
    <label>Is Scored</label>
    <type>Checkbox</type>
</CustomField>