force-app/main/default/objects/ampi__Question__c/fields/ampi__Multi_Select_Picklist_Response__c.field-meta.xml
<CustomField>
    <fullName>ampi__Multi_Select_Picklist_Response__c</fullName>
    <description>Long Text field to store the response to a Question when Response Type is Multiselect Picklist.</description>
    <label>Multi-Select Picklist Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>