force-app/main/default/objects/ampi__Question__c/fields/ampi__Number_Response__c.field-meta.xml
<CustomField>
    <fullName>ampi__Number_Response__c</fullName>
    <description>Text field to store the response to a Question when Response Type is Number.</description>
    <label>Number Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>