force-app/main/default/objects/ampi__Question__c/fields/ampi__Order__c.field-meta.xml
<CustomField>
    <fullName>ampi__Order__c</fullName>
    <description>Number field to determine the order in which sections and questions display in the Lightning components on Submission. This field is populated by the SubmissionTemplateBuilder component.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>