force-app/main/default/objects/ampi__Question__c/fields/ampi__Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup field to track the parent Question from a Submission template on an Answer.</description>
    <label>Parent Question</label>
    <referenceTo>ampi__Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>