force-app/main/default/objects/ampi__Question__c/fields/ampi__Picklist_Response__c.field-meta.xml
<CustomField>
    <fullName>ampi__Picklist_Response__c</fullName>
    <description>Text field to store the response to a Question when Response Type is Picklist.</description>
    <label>Picklist Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>