force-app/main/default/objects/ampi__Question__c/fields/ampi__Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>ampi__Picklist_Values__c</fullName>
    <description>Long text area field to store the custom comma-separated picklist values for a Question where the Response Type is Picklist or Multiselect Picklist. The values entered here are dynamically displayed as a picklist in the Lightning component on Submission response records.</description>
    <inlineHelpText>Set the response values for a picklist question by entering comma-separated values in this field.</inlineHelpText>
    <label>Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>