force-app/main/default/objects/ampi__Question__c/fields/ampi__Required__c.field-meta.xml
<CustomField>
    <fullName>ampi__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox field determines whether a response to this Question record will be required for submission. If marked as TRUE, if the Question is left blank in the SubmissionResponseForm, the responder will not be able to submit their Submission successfully.</description>
    <label>Required?</label>
    <type>Checkbox</type>
</CustomField>