force-app/main/default/objects/ampi__Question__c/fields/ampi__Response_Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Response_Type__c</fullName>
    <description>The value selected in this picklist field determines the display of this Question record in the Lightning component for Submission responses. The value selected in this field also determines which fields are editable in the SubmissionTemplateBuilder component.</description>
    <label>Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualitative</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>