force-app/main/default/objects/ampi__Question__c/fields/ampi__Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reviewer_Comments__c</fullName>
    <description>Long text area field for reviewers to store their comments regarding the score they assigned to a Question response</description>
    <label>Reviewer Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>