force-app/main/default/objects/ampi__Question__c/fields/ampi__Reviewer_Instructions__c.field-meta.xml
<CustomField>
    <fullName>ampi__Reviewer_Instructions__c</fullName>
    <description>Long text area field to provide reviewer with additional guidance or instructions when responding to this Question record</description>
    <inlineHelpText>Use this box to provide additional guidance to your submitting reviewer on this question</inlineHelpText>
    <label>Reviewer Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>