force-app/main/default/objects/ampi__Question__c/fields/ampi__Score__c.field-meta.xml
<CustomField>
    <fullName>ampi__Score__c</fullName>
    <description>Number field to track the score a reviewer will assign to a Question response</description>
    <label>Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>