force-app/main/default/objects/ampi__Question__c/fields/ampi__Section__c.field-meta.xml
<CustomField>
    <fullName>ampi__Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to track the parent Section for a Question record</description>
    <label>Section</label>
    <referenceTo>ampi__Section__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>