force-app/main/default/objects/ampi__Question__c/fields/ampi__Short_Text_Response__c.field-meta.xml
<CustomField>
    <fullName>ampi__Short_Text_Response__c</fullName>
    <description>Text field to store the response when Response Type is Short Text.</description>
    <label>Short Text Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>