force-app/main/default/objects/ampi__Question__c/fields/ampi__Submission__c.field-meta.xml
<CustomField>
    <fullName>ampi__Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field tracks the parent Submission record for this Question record</description>
    <label>Submission</label>
    <referenceTo>ampi__Submission__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>