force-app/main/default/objects/ampi__Question__c/fields/ampi__Text_Response__c.field-meta.xml
<CustomField>
    <fullName>ampi__Text_Response__c</fullName>
    <description>Rich text area field to store either responses when Response Type is Qualitative, or comments when Response Type is Picklist or Number.</description>
    <label>Text Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>