force-app/main/default/objects/ampi__Question__c/fields/ampi__Text_Response_Character_Limit__c.field-meta.xml
<CustomField>
    <fullName>ampi__Text_Response_Character_Limit__c</fullName>
    <description>This number field allows users to define a maximum character count for answers to text questions when building a Submission Template.</description>
    <inlineHelpText>Set a maximum character limit for qualitative responses. If responses exceed this character limit, then the respondent will receive an error message.</inlineHelpText>
    <label>Character Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>