force-app/main/default/objects/ampi__Question__c/fields/ampi__xx_Conditionally_Displayed__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Conditionally_Displayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conditionally Display This Question?</label>
    <type>Checkbox</type>
</CustomField>