force-app/main/default/objects/ampi__Question__c/recordTypes/ampi__Answer.recordType-meta.xml
<RecordType>
    <fullName>ampi__Answer</fullName>
    <active>true</active>
    <description>Cloned versions of template questions that can also track responses and review scores</description>
    <label>Answer</label>
</RecordType>