force-app/main/default/objects/ampi__Question__c/recordTypes/ampi__Question.recordType-meta.xml
<RecordType>
    <fullName>ampi__Question</fullName>
    <active>true</active>
    <description>Template versions of Questions for a Submission, which are cloned for Answers in response Submissions</description>
    <label>Question</label>
</RecordType>